--- a/templates/admin/chat-nav.html
+++ b/templates/admin/chat-nav.html
@@ -11,45 +11,20 @@
                 <li>
                     <a href="chat.html">
                         <span class="chat-avatar-sm user-img">
-                            <img class="rounded-circle" alt="" src="assets/img/user.jpg">
+                            <img class="rounded-circle" alt="" src="{% static 'img/user.jpg' %}">
                         </span>
-                        <span class="chat-user">#General</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="chat.html">
-                        <span class="chat-avatar-sm user-img">
-                            <img class="rounded-circle" alt="" src="assets/img/user.jpg">
-                        </span>
-                        <span class="chat-user">#Video Responsive Survey</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="chat.html">
-                        <span class="chat-avatar-sm user-img">
-                            <img class="rounded-circle" alt="" src="assets/img/user.jpg">
-                        </span>
-                        <span class="chat-user">#500rs</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="chat.html">
-                        <span class="chat-avatar-sm user-img">
-                            <img class="rounded-circle" alt="" src="assets/img/user.jpg">
-                        </span>
-                        <span class="chat-user">#warehouse</span>
+                        <span class="chat-user">Group 1</span>
                     </a>
                 </li>
                 <li class="menu-title">Direct Chats <a href="#" data-toggle="modal" data-target="#add_chat_user"><i class="fa fa-plus"></i></a></li>
                 {% for user in user_list %}
                 <li>
-                    <a href="#" id="room-name-{{user.id}}" onclick="redirectToChatRoom('{{user.id}}')">
+                    <button class="btn text-muted" id="room-name-{{user.id}}" onclick="redirectToChatRoom({{user.id}})">
                         <span class="chat-avatar-sm user-img">
                             <img class="rounded-circle" alt="" src="{{ user.avatar.url }}"><span class="status offline"></span>
                         </span>
                         <span class="chat-user">{{user.username}}</span>
-<!--                        <span class="badge badge-pill bg-danger">7</span>-->
-                    </a>
+                    </button>
                 </li>
                 {% endfor %}
             </ul>
@@ -57,4 +32,13 @@
     </div>
 </div>
 
+
+
+
+<script>
+	function redirectToChatRoom(room_name) {
+		window.location.pathname = '/hrms/chat/' + room_name;
+	}
+</script>
 <!-- /Sidebar -->
+
