--- a/templates/admin/chat.html
+++ b/templates/admin/chat.html
@@ -30,7 +30,7 @@
 								</div>
 								<div class=" float-left">
 									<a href="profile.html"><span class="text-dark">{{chat_users.username}}</span> <!-- <i class="typing-text">Typing...</i>--></a>
-									<span class="last-seen">Last seen today at 7:50 AM</span>
+									<span class="last-seen">Last seen today at 7:50 AM ||| {{ room_name|json_script:"room-name" }}</span>
 								</div>
 							</div>
 							<div class="search-box">
@@ -127,7 +127,7 @@
 <!--							</div>-->
 <!--						</div>-->
 <!--Chat View Add Manually-->
-					<textarea id="chat-log" class="h-100 w-100"></textarea>
+					<textarea id="chat-log" class="h-100 w-100 border-0" style="resize: none;" disabled></textarea>
 					</div>
 					<div class="chat-footer">
 						<div class="message-bar">
@@ -139,7 +139,6 @@
 										<span class="input-group-append">
 											<button class="btn btn-custom" id="chat-message-submit" type="button"><i class="fa fa-send"></i></button>
 										</span>
-										{{ room_name|json_script:"room-name" }}
 									</div>
 								</div>
 							</div>
@@ -596,58 +595,45 @@
 
 </div>
 <!-- /Page Wrapper -->
-
-
 <script>
-	function redirectToChatRoom(roomName) {
-		window.location.pathname = '/hrms-admin/chat/' + roomName;
-	}
+    const room_name = "{{chat_users.id}}";
+    const chatSocket = new WebSocket("ws://" + window.location.host + "/ws/chat/" + room_name + "/");
+
+    chatSocket.onopen = function (e) {
+        console.log("WebSocket connection established.");
+    };
+
+    chatSocket.onmessage = function (e) {
+        const data = JSON.parse(e.data);
+        document.querySelector("#chat-log").value += data.message + "\n";
+    };
+
+    chatSocket.onerror = function (event) {
+        console.error("WebSocket error observed:", event);
+    };
+
+    chatSocket.onclose = function (event) {
+        if (event.wasClean) {
+            console.log(`WebSocket connection closed cleanly, code=${event.code} reason=${event.reason}`);
+        } else {
+            console.error("Chat socket closed unexpectedly");
+        }
+    };
+
+    document.querySelector("#chat-message-input").focus();
+    document.querySelector("#chat-message-input").onkeyup = function (e) {
+        if (e.key === "Enter") {
+            document.querySelector("#chat-message-submit").click();
+        }
+    };
+
+    document.querySelector("#chat-message-submit").onclick = function (e) {
+        const messageInputDom = document.querySelector("#chat-message-input");
+        const message = messageInputDom.value;
+        chatSocket.send(JSON.stringify({ message: message }));
+        messageInputDom.value = "";
+    };
 </script>
-<script>
-	const chatSocket = new WebSocket(
-	  "ws://" +
-		window.location.host +
-		"/ws/chat/" +
-		roomName +
-		"/"
-	);
 
-	chatSocket.onopen = function (e) {
-	  console.log("WebSocket connection established.");
-	};
-
-	chatSocket.onmessage = function (e) {
-	  const data = JSON.parse(e.data);
-	  document.querySelector("#chat-log").value += data.message + "\n";
-	};
-
-	chatSocket.onerror = function (event) {
-	  console.error("WebSocket error observed:", event);
-	};
-
-	chatSocket.onclose = function (event) {
-	  if (event.wasClean) {
-		console.log(
-		  `WebSocket connection closed cleanly, code=${event.code} reason=${event.reason}`
-		);
-	  } else {
-		console.error("Chat socket closed unexpectedly");
-	  }
-	};
-
-	document.querySelector("#chat-message-input").focus();
-	document.querySelector("#chat-message-input").onkeyup = function (e) {
-	  if (e.key === "Enter") {
-		document.querySelector("#chat-message-submit").click();
-	  }
-	};
-
-	document.querySelector("#chat-message-submit").onclick = function (e) {
-	  const messageInputDom = document.querySelector("#chat-message-input");
-	  const message = messageInputDom.value;
-	  chatSocket.send(JSON.stringify({ message: message }));
-	  messageInputDom.value = "";
-	};
-</script>
 
 {% endblock body %}
