--- a/templates/admin/navigationpanel.html
+++ b/templates/admin/navigationpanel.html
@@ -28,7 +28,7 @@
                 </li>
 
                 <li><a href="{% url 'AdminTicketList' %}" class="{% if url_name == 'AdminTicketList' %}text-white{% endif %}"><i class="la la-ticket"></i> <span>Tickets</span></a></li>
-                <li><a href="{% url 'AdminChatView' %}" class="{% if url_name == 'AdminChatView' %}text-white{% endif %}"><i class="las la-comments"></i><span>Chat</span></a></li>
+                <li><a href="{% url 'ChatView' %}" class="{% if url_name == 'ChatView' %}text-white{% endif %}"><i class="las la-comments"></i><span>Chat</span></a></li>
                 <li><a href="{% url 'AdminClientsView' %}" class="{% if url_name == 'AdminClientsView' %}text-white{% endif %}"><i class="las la-handshake"></i><span>Clients</span></a></li>
 <!--                <li class="menu-title"><span>Project</span></li>-->
                 <li><a href="{% url 'AdminProjectsView' %}" class="{% if url_name == 'AdminProjectsView' %}text-white{% elif url_name == 'AdminProjectDetailsView' %}text-white{% endif %}"><i class="lab la-product-hunt"></i><span>Projects</span></a></li>
