--- a/templates/employee/chat.html
+++ b/templates/employee/chat.html
@@ -1,6 +1,7 @@
 {% extends 'employee/base.html' %}
 {% load static %}
 {% block body %}
+
 <!-- Sidebar -->
 {% block nav %}{% include 'employee/chat-nav.html' %}{% endblock nav %}
 <!-- /Sidebar -->
@@ -29,7 +30,7 @@
 								</div>
 								<div class=" float-left">
 									<a href="profile.html"><span class="text-dark">{{chat_users.username}}</span> <!-- <i class="typing-text">Typing...</i>--></a>
-									<span class="last-seen">Last seen today at 7:50 AM</span>
+									<span class="last-seen">Last seen today at 7:50 AM ||| {{ room_name|json_script:"room-name" }}</span>
 								</div>
 							</div>
 							<div class="search-box">
@@ -61,70 +62,72 @@
 						</div>
 					</div>
 					<div class="chat-contents">
-						<div class="chat-content-wrap">
-							<div class="chat-wrap-inner">
-								<div class="chat-box">
-									<div class="chats">
-										<div class="chat chat-right">
-											<div class="chat-body">
-												<div class="chat-bubble">
-													<div class="chat-content">
-														<p>Hello. What can I do for you?</p>
-														<span class="chat-time">8:30 am</span>
-													</div>
-<!--													<div class="chat-action-btns">-->
-<!--														<ul>-->
-<!--															<li><a href="#" class="share-msg" title="Share"><i class="fa fa-share-alt"></i></a></li>-->
-<!--															<li><a href="#" class="edit-msg"><i class="fa fa-pencil"></i></a></li>-->
-<!--															<li><a href="#" class="del-msg"><i class="fa fa-trash-o"></i></a></li>-->
-<!--														</ul>-->
+<!--						<div class="chat-content-wrap">-->
+<!--							<div class="chat-wrap-inner">-->
+<!--								<div class="chat-box">-->
+<!--									<div class="chats">-->
+<!--										<div class="chat chat-right">-->
+<!--											<div class="chat-body">-->
+<!--												<div class="chat-bubble">-->
+<!--													<div class="chat-content">-->
+<!--														<p>Hello. What can I do for you?</p>-->
+<!--														<span class="chat-time">8:30 am</span>-->
 <!--													</div>-->
-												</div>
-											</div>
-										</div>
-										<div class="chat-line">
-											<span class="chat-date">October 8th, 2018</span>
-										</div>
-										<div class="chat chat-left">
-											<div class="chat-avatar">
-												<a href="profile.html" class="avatar">
-													<img alt="" src="assets/img/profiles/avatar-05.jpg">
-												</a>
-											</div>
-											<div class="chat-body">
-												<div class="chat-bubble">
-													<div class="chat-content">
-														<p>I'm just looking around.</p>
-														<p>Will you tell me something about yourself? </p>
-														<span class="chat-time">8:35 am</span>
-													</div>
-<!--													<div class="chat-action-btns">-->
-<!--														<ul>-->
-<!--															<li><a href="#" class="share-msg" title="Share"><i class="fa fa-share-alt"></i></a></li>-->
-<!--															<li><a href="#" class="edit-msg"><i class="fa fa-pencil"></i></a></li>-->
-<!--															<li><a href="#" class="del-msg"><i class="fa fa-trash-o"></i></a></li>-->
-<!--														</ul>-->
+<!--&lt;!&ndash;													<div class="chat-action-btns">&ndash;&gt;-->
+<!--&lt;!&ndash;														<ul>&ndash;&gt;-->
+<!--&lt;!&ndash;															<li><a href="#" class="share-msg" title="Share"><i class="fa fa-share-alt"></i></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;															<li><a href="#" class="edit-msg"><i class="fa fa-pencil"></i></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;															<li><a href="#" class="del-msg"><i class="fa fa-trash-o"></i></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;														</ul>&ndash;&gt;-->
+<!--&lt;!&ndash;													</div>&ndash;&gt;-->
+<!--												</div>-->
+<!--											</div>-->
+<!--										</div>-->
+<!--										<div class="chat-line">-->
+<!--											<span class="chat-date">October 8th, 2018</span>-->
+<!--										</div>-->
+<!--										<div class="chat chat-left">-->
+<!--											<div class="chat-avatar">-->
+<!--												<a href="profile.html" class="avatar">-->
+<!--													<img alt="" src="assets/img/profiles/avatar-05.jpg">-->
+<!--												</a>-->
+<!--											</div>-->
+<!--											<div class="chat-body">-->
+<!--												<div class="chat-bubble">-->
+<!--													<div class="chat-content">-->
+<!--														<p>I'm just looking around.</p>-->
+<!--														<p>Will you tell me something about yourself? </p>-->
+<!--														<span class="chat-time">8:35 am</span>-->
 <!--													</div>-->
-												</div>
-												<div class="chat-bubble">
-													<div class="chat-content">
-														<p>Are you there? That time!</p>
-														<span class="chat-time">8:40 am</span>
-													</div>
-<!--													<div class="chat-action-btns">-->
-<!--														<ul>-->
-<!--															<li><a href="#" class="share-msg" title="Share"><i class="fa fa-share-alt"></i></a></li>-->
-<!--															<li><a href="#" class="edit-msg"><i class="fa fa-pencil"></i></a></li>-->
-<!--															<li><a href="#" class="del-msg"><i class="fa fa-trash-o"></i></a></li>-->
-<!--														</ul>-->
+<!--&lt;!&ndash;													<div class="chat-action-btns">&ndash;&gt;-->
+<!--&lt;!&ndash;														<ul>&ndash;&gt;-->
+<!--&lt;!&ndash;															<li><a href="#" class="share-msg" title="Share"><i class="fa fa-share-alt"></i></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;															<li><a href="#" class="edit-msg"><i class="fa fa-pencil"></i></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;															<li><a href="#" class="del-msg"><i class="fa fa-trash-o"></i></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;														</ul>&ndash;&gt;-->
+<!--&lt;!&ndash;													</div>&ndash;&gt;-->
+<!--												</div>-->
+<!--												<div class="chat-bubble">-->
+<!--													<div class="chat-content">-->
+<!--														<p>Are you there? That time!</p>-->
+<!--														<span class="chat-time">8:40 am</span>-->
 <!--													</div>-->
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
+<!--&lt;!&ndash;													<div class="chat-action-btns">&ndash;&gt;-->
+<!--&lt;!&ndash;														<ul>&ndash;&gt;-->
+<!--&lt;!&ndash;															<li><a href="#" class="share-msg" title="Share"><i class="fa fa-share-alt"></i></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;															<li><a href="#" class="edit-msg"><i class="fa fa-pencil"></i></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;															<li><a href="#" class="del-msg"><i class="fa fa-trash-o"></i></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;														</ul>&ndash;&gt;-->
+<!--&lt;!&ndash;													</div>&ndash;&gt;-->
+<!--												</div>-->
+<!--											</div>-->
+<!--										</div>-->
+<!--									</div>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--Chat View Add Manually-->
+					<textarea id="chat-log" class="h-100 w-100 border-0" style="resize: none;" disabled></textarea>
 					</div>
 					<div class="chat-footer">
 						<div class="message-bar">
@@ -132,9 +135,9 @@
 								<a class="link attach-icon" href="#" data-toggle="modal" data-target="#drag_files"><img src="assets/img/attachment.png" alt=""></a>
 								<div class="message-area">
 									<div class="input-group">
-										<textarea class="form-control" placeholder="Type message..."></textarea>
+										<input class="form-control" id="chat-message-input" placeholder="Type message..." type="text">
 										<span class="input-group-append">
-											<button class="btn btn-custom" type="button"><i class="fa fa-send"></i></button>
+											<button class="btn btn-custom" id="chat-message-submit" type="button"><i class="fa fa-send"></i></button>
 										</span>
 									</div>
 								</div>
@@ -592,5 +595,45 @@
 
 </div>
 <!-- /Page Wrapper -->
+<script>
+    const room_name = "{{chat_users.id}}";
+    const chatSocket = new WebSocket("ws://" + window.location.host + "/ws/chat/" + room_name + "/");
+
+    chatSocket.onopen = function (e) {
+        console.log("WebSocket connection established.");
+    };
+
+    chatSocket.onmessage = function (e) {
+        const data = JSON.parse(e.data);
+        document.querySelector("#chat-log").value += data.message + "\n";
+    };
+
+    chatSocket.onerror = function (event) {
+        console.error("WebSocket error observed:", event);
+    };
+
+    chatSocket.onclose = function (event) {
+        if (event.wasClean) {
+            console.log(`WebSocket connection closed cleanly, code=${event.code} reason=${event.reason}`);
+        } else {
+            console.error("Chat socket closed unexpectedly");
+        }
+    };
+
+    document.querySelector("#chat-message-input").focus();
+    document.querySelector("#chat-message-input").onkeyup = function (e) {
+        if (e.key === "Enter") {
+            document.querySelector("#chat-message-submit").click();
+        }
+    };
+
+    document.querySelector("#chat-message-submit").onclick = function (e) {
+        const messageInputDom = document.querySelector("#chat-message-input");
+        const message = messageInputDom.value;
+        chatSocket.send(JSON.stringify({ message: message }));
+        messageInputDom.value = "";
+    };
+</script>
+
 
 {% endblock body %}
